# bark-chase

./: .gitignore  .vercelignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/api/geo-country/: route.ts
app/intro/: layout.tsx  page.tsx
app/play/: layout.tsx  page.tsx
app/ranking/: page.tsx
components/: convex-fogo-sync.tsx  navbar-mobile-panel.tsx  navbar-rank-summary.tsx  navbar.tsx  providers.tsx
components/chase-dog/: bark-counter.tsx  clickable-area.tsx  dog-image.tsx  header.tsx  index.tsx
convex/: schema.ts  users.ts
docs/: fogo-burn-wrapper-guide.md  fogo-paymaster-config.mainnet.toml  paymaster-config.example.toml
lib/: burn-chase-token.ts  chase-balance-events.ts  chase-token.ts  get-country-from-ip.ts
programs/chase-burn-wrapper/: Anchor.toml  Cargo.toml  README.md
programs/chase-burn-wrapper/programs/chase_burn_wrapper/: Cargo.toml
programs/chase-burn-wrapper/programs/chase_burn_wrapper/src/: lib.rs
