[package]
name = "chase_burn_wrapper"
version = "0.1.0"
description = "Wrapper program that burns exactly 1 $CHASE by CPI into SPL Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chase_burn_wrapper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
fogo-sessions-sdk = { version = "0.7.5", features = ["anchor", "token-program"] }
